hphp/test/zend/bad/ext/zlib/tests/bug55544.php
<?php
$_ENV[HTTP_ACCEPT_ENCODING] = gzip;
_filter_snapshot_globals();

echo "hi";
?>
